--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -3,6 +3,7 @@ permissions: {}
 on:
   push:
     branches: [ "main" ]
+    tags: [ "v*" ]
     paths:
       - packages/server/**
       - .github/workflows/build-server.yml
