feat: remove elysia-ip

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,10 @@
       "program": "src/index.ts",
       "cwd": "${workspaceFolder}/packages/server",
       "stopOnEntry": false,
-      "watchMode": false
+      "watchMode": false,
+      "env": {
+        "ENABLE_LOG_IP": "true"
+      }
     }
   ]
 }
