--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,8 +21,7 @@
     "@lukeed/uuid": "^2.0.1",
     "dayjs": "^1.11.10",
     "drizzle-orm": "^0.29.3",
-    "elysia": "^0.8.15",
-    "elysia-ip": "^0.0.7"
+    "elysia": "^0.8.15"
   },
   "devDependencies": {
     "drizzle-kit": "^0.20.13"
